# ChangeLog for xfce-base/xfce-utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*xfce-utils-4.5.93 (14 Jan 2009)

  14 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +xfce-utils-4.5.93.ebuild:
  Xfce-4.6 beta3

  19 Dec 2008; Christoph Mende <angelos@gentoo.org>
  xfce-utils-4.5.92.ebuild, xfce-utils-9999.ebuild:
  Moved the session file generation to xfce-utils

  18 Dec 2008; Christoph Mende <angelos@gentoo.org>
  xfce-utils-4.5.92.ebuild, xfce-utils-9999.ebuild:
  Moved XFCE_CONFIG to pkg_setup

*xfce-utils-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce-utils-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  10 Nov 2008; Christoph Mende <angelos@gentoo.org> xfce-utils-9999.ebuild:
  Bump gtk+ dependency to 2.10

  09 Nov 2008; Christoph Mende <angelos@gentoo.org> xfce-utils-9999.ebuild:
  Fix dependencies

  24 Sep 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
  xfce-utils-9999.ebuild:
  Added lock USE flag for screen locking

  08 Sep 2008; Christoph Mende <angelos@gentoo.org> xfce-utils-9999.ebuild:
  Removed --enable-gdm and fixed xfce4 dependencies

  23 Jun 2008; Christoph Mende <angelos@gentoo.org> xfce-utils-9999.ebuild:
  Removed old mcs references

  29 Sep 2007; Christoph Mende <angelos@gentoo.org> +files/Gentoo:
  Added missing Gentoo file

  29 Jun 2007; Christoph Mende <angelos@gentoo.org> xfce-utils-9999.ebuild:
  Removed deprecated dependency on <dbus-1

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
