@@ -4,15 +4,17 @@ Hash: SHA1
 AUX Gentoo 644 RMD160 29853c59779a2eb685aa4082bf5c312588fbe633 SHA1 01f2135774ead9534fb374cfbeb7eb123d9aff55 SHA256 1ddff80be5707ff8eb888d8f41d9cd0df5c7e0e1bd84c28ed962b4c71028efc1
 DIST xfce-utils-4.5.92.tar.bz2 599262 RMD160 d4fac453effc22ccc8e453b0367f75b785e9a690 SHA1 44521a81d662458e6aaaabea2d7abb52d9f06613 SHA256 71327b5dc31c8a2d354c97a2661ebac6a9b555db553eeb5bbdbddce911563e19
 DIST xfce-utils-4.5.93.tar.bz2 609660 RMD160 cab31243672decc1b7d419a255f00b6b698d62a2 SHA1 0fca77266c9ea3bee0fef6b19cef82ed6aa63c17 SHA256 3dec00f4522bae04ea7bc385b7435dd9adbc586c213579e4f44e8689aaf4f5bb
+DIST xfce-utils-4.5.99.1.tar.bz2 617010 RMD160 f150554c74122be2bc6c1c2a7c74c688bb9a47ab SHA1 185eb49848de1e563319a9bcc2ca4ce2a27d41c4 SHA256 e463a05d1d879ad618ebf897cc3f5c5015306defcb7f921f6d61c9307f6b891e
 EBUILD xfce-utils-4.5.92.ebuild 1176 RMD160 1f11e4fc04d753750c44a6849e49b4544329af55 SHA1 cb03b4274a205a19624b1afaf0f453b87b6b8d05 SHA256 e7f2b21f4baefc3ae7f88dd821d7c0bf1fe19947b60770767a0ff04704fb688c
 EBUILD xfce-utils-4.5.93.ebuild 1176 RMD160 1f11e4fc04d753750c44a6849e49b4544329af55 SHA1 cb03b4274a205a19624b1afaf0f453b87b6b8d05 SHA256 e7f2b21f4baefc3ae7f88dd821d7c0bf1fe19947b60770767a0ff04704fb688c
+EBUILD xfce-utils-4.5.99.1.ebuild 1176 RMD160 1f11e4fc04d753750c44a6849e49b4544329af55 SHA1 cb03b4274a205a19624b1afaf0f453b87b6b8d05 SHA256 e7f2b21f4baefc3ae7f88dd821d7c0bf1fe19947b60770767a0ff04704fb688c
 EBUILD xfce-utils-9999.ebuild 1176 RMD160 1f11e4fc04d753750c44a6849e49b4544329af55 SHA1 cb03b4274a205a19624b1afaf0f453b87b6b8d05 SHA256 e7f2b21f4baefc3ae7f88dd821d7c0bf1fe19947b60770767a0ff04704fb688c
-MISC ChangeLog 1559 RMD160 bfc81887266da370272ac46e87b24a087e9ad625 SHA1 96818475fcc5cdee4c693256f98d22b40339c8e6 SHA256 4a19f54fc4e0015d4eb94c65e5c274db98676080ef659f40a88e14926b0e58f7
+MISC ChangeLog 1694 RMD160 badaaf6932d17b13f93687c4e6a8dde8f08d5bd3 SHA1 00e983e5a2d7ef49e6ce83e236f1e6417d584fea SHA256 5fa53376a288fb21279c2f7201bc5c801cdbb732c88c5d853bbbc994672f226a
 MISC metadata.xml 218 RMD160 e064747a2c888959d939ed09a70c242d905c89ea SHA1 8ff18a8acc37d299a3cc7b30663ca3eb0f91032e SHA256 c47df69ae42900828c5afb0aa77ee6f9ddca55a79b3326f69a0bbf8119f3d5df
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYcACgkQKhnDs22gwa+gLgCeK82sVDhSB4orU4wacbxka7jZ
-djwAoKBHYamjFZTFsKtv/DnKtIO9RR5b
-=9xAq
+iEYEARECAAYFAkl9xZoACgkQKhnDs22gwa+4/ACaAtt3HvBn5FmXelMG7uFjYsqA
+WTQAnReWmc/WCpCVpGlRNBEu/w2PI3lf
+=0pM2
 -----END PGP SIGNATURE-----
